force-app/main/default/objects/MDG_Bank__c/MDG_Bank__c.object-meta.xml
<CustomObject>
    <label>MDG Bank</label>
    <nameField>
        <label>IBAN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDG Bank</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>