force-app/main/default/objects/MDG_Bank__c/fields/AEDAT__c.field-meta.xml
<CustomField>
    <fullName>AEDAT__c</fullName>
    <label>AEDAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>