force-app/main/default/objects/MDG_Bank__c/fields/AENAM__c.field-meta.xml
<CustomField>
    <fullName>AENAM__c</fullName>
    <label>AENAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>