force-app/main/default/objects/MDG_Bank__c/fields/AETIM__c.field-meta.xml
<CustomField>
    <fullName>AETIM__c</fullName>
    <label>AETIM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>