force-app/main/default/objects/MDG_Bank__c/fields/BANKA__c.field-meta.xml
<CustomField>
    <fullName>BANKA__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>