force-app/main/default/objects/MDG_Bank__c/fields/BANKL__c.field-meta.xml
<CustomField>
    <fullName>BANKL__c</fullName>
    <label>Bank Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>