force-app/main/default/objects/MDG_Bank__c/fields/BANKS__c.field-meta.xml
<CustomField>
    <fullName>BANKS__c</fullName>
    <label>BANKS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>