force-app/main/default/objects/MDG_Bank__c/fields/CRDAT__c.field-meta.xml
<CustomField>
    <fullName>CRDAT__c</fullName>
    <label>CRDAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>