force-app/main/default/objects/MDG_Bank__c/fields/CRNAM__c.field-meta.xml
<CustomField>
    <fullName>CRNAM__c</fullName>
    <label>CRNAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>