force-app/main/default/objects/MDG_Bank__c/fields/CRTIM__c.field-meta.xml
<CustomField>
    <fullName>CRTIM__c</fullName>
    <label>CRTIM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>