force-app/main/default/objects/MDG_Bank__c/fields/ORT01__c.field-meta.xml
<CustomField>
    <fullName>ORT01__c</fullName>
    <label>ORT01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>