force-app/main/default/objects/MDG_Bank__c/fields/PROVZ__c.field-meta.xml
<CustomField>
    <fullName>PROVZ__c</fullName>
    <label>PROVZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>