force-app/main/default/objects/MDG_Bank__c/fields/SORT1__c.field-meta.xml
<CustomField>
    <fullName>SORT1__c</fullName>
    <label>SORT1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>