force-app/main/default/objects/MDG_Bank__c/fields/ZCSBM__c.field-meta.xml
<CustomField>
    <fullName>ZCSBM__c</fullName>
    <label>ZCSBM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>