force-app/main/default/objects/MDG_Bank__c/fields/ZLYBM__c.field-meta.xml
<CustomField>
    <fullName>ZLYBM__c</fullName>
    <label>ZLYBM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>