force-app/main/default/objects/MDG_Bank__c/fields/ZLYXT__c.field-meta.xml
<CustomField>
    <fullName>ZLYXT__c</fullName>
    <label>ZLYXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>