force-app/main/default/objects/MDG_Bank__c/fields/ZQCSJ__c.field-meta.xml
<CustomField>
    <fullName>ZQCSJ__c</fullName>
    <label>ZQCSJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>