force-app/main/default/objects/MDG_Bank__c/fields/ZQSBM__c.field-meta.xml
<CustomField>
    <fullName>ZQSBM__c</fullName>
    <label>ZQSBM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>