force-app/main/default/objects/MDG_Bank__c/fields/ZTJJG__c.field-meta.xml
<CustomField>
    <fullName>ZTJJG__c</fullName>
    <label>ZTJJG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>