force-app/main/default/objects/MDG_Bank__c/fields/ZYHBB__c.field-meta.xml
<CustomField>
    <fullName>ZYHBB__c</fullName>
    <label>ZYHBB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>