force-app/main/default/objects/MDG_Bank__c/fields/ZYHDM__c.field-meta.xml
<CustomField>
    <fullName>ZYHDM__c</fullName>
    <label>ZYHDM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>