force-app/main/default/objects/MDG_Bank__c/fields/ZYHFH__c.field-meta.xml
<CustomField>
    <fullName>ZYHFH__c</fullName>
    <label>ZYHFH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>