force-app/main/default/objects/MDG_Bank__c/fields/ZYHLB__c.field-meta.xml
<CustomField>
    <fullName>ZYHLB__c</fullName>
    <label>ZYHLB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>