force-app/main/default/objects/MDG_Bank__c/fields/ZYZBM__c.field-meta.xml
<CustomField>
    <fullName>ZYZBM__c</fullName>
    <label>ZYZBM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>