force-app/main/default/objects/MDG_Bank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BANKS__c</columns>
    <columns>BANKL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>